<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="_4_5">4.5</string>
    <string name="rs_299">Rs.299</string>
    <string name="check_internet">Check Internet</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_sort">Sort</string>
    <string name="shruti_gupta">Shruti Gupta</string>
    <string name="_91_5557779999">+91–5557779999</string>
    <string name="shruti_gmail_com">shruti@gmail.com</string>
    <string name="delhi">Delhi</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">BookHub Preferences</string>
    <string name="a_place_for_all_your_favourites_books_and_more">// A place for all your favourites books and more //</string>
    <string name="made_in_india">/*........ MADE IN INDIA ........*/</string>
    <string name="welcome_to_the_bookhub">Welcome to the BookHub!!</string>
    <string name="log_out">Log Out</string>
    <string name="book_hub">Book Hub</string>


</resources>