<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.internshala.bookhub.fragment.AboutAppFragment"
    android:background="#ffffff">


    <TextView
        android:id="@+id/txtAboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_bookhub"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/colorFavourite"/>

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:src="@drawable/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtAboutApp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtAppHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/imgApp"
        android:text="@string/a_place_for_all_your_favourites_books_and_more"
        android:textStyle="italic"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txtAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@+id/txtAppHeading"
        android:textColor="#000000"
        android:paddingStart="10dp"
        android:text="This app display the list of popular books.You can see the full description of each book.You can also add a book to favourites and remove from it.You can sort the books according to its rating.
 The app also has other screens such as Profile Page which will tell you about the developer that made the app and an about app page which will tell you about the function of an app.
 The app have a feature of Potrait-Mode means the app will definately work when you rotate your screen.The app also have a feature of Internet Connectivity,as the app if connected to internet,only then it will work."/>
    <TextView
        android:id="@+id/txtAppIndia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_below="@+id/txtAppInfo"
        android:text="@string/made_in_india"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true"/>

</RelativeLayout>